--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
       <a class="header__logo" href="{{ '/' | relative_url }}">
         <div class="header__logo--container">
           <!--{% include logo.svg %}-->
-          <p>SpedHub</p>
+          <p>Spedhub</p>
         </div>
       </a>
       <nav class="header__links">
