--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="header__inner">
       <a class="header__logo" href="{{ '/' | relative_url }}">
-        <div class="header__logo--container">
+        <div class="header__logo--container bigger">
           <!--{% include logo.svg %}-->
           <p>Spedhub</p>
         </div>
