--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
   </div>
 </footer>
 <script async src="{{ "/assets/js/bundle.js" | relative_url }}"></script>
-<script async src="{{ "/assets/js/boostrap.bundle.min.js" | relative_url }}"></script>
+<script async src="{{ "/assets/js/bootstrap.bundle.min.js" | relative_url }}"></script>
 {% if site.service_worker %}
 <script async>
   if ('serviceWorker' in navigator) {
