--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,6 +32,9 @@
   <noscript><link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}"></noscript>
   <link rel="preload" href="{{ '/assets/css/bootstrap.min.css' | relative_url }}" as="style" onload="this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="{{ '/assets/css/bootstrap.min.css' | relative_url }}"></noscript>
+  <link rel="preload" href="{{ '/assets/css/bootstrap.rtl.min.css' | relative_url }}" as="style" onload="this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="{{ '/assets/css/bootstrap.rtl.min.css' | relative_url }}"></noscript>
+
   <script type="text/javascript">
    {% include loadCss.js %}
   </script>
